<resources>
    <string name="app_name">PopularImageApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="source">Source:</string>
    <string name="source_">source</string>
    <string name="rating">Rating:</string>
    <string name="rating_">rating</string>
    <string name="display_name">Display_name:</string>
    <string name="display_name_">display_name</string>
</resources>